Open Lemon Squeezy overlay and add blog purchase box

--- a/new-york/index.html
+++ b/new-york/index.html
@@ -139,7 +139,7 @@
                 <li><a href="/a-propos/">À propos</a></li>
                 <li><a href="/newsletter/">Newsletter</a></li>
             </ul>
-            <a href="#purchase" class="nav-cta cta-button">Acheter</a>
+            <a href="https://new-york-mon-eveil.lemonsqueezy.com/checkout/buy/629edd26-dec8-40f4-ac3b-f3f91fcc50e6?embed=1" class="lemonsqueezy-button nav-cta cta-button">Acheter</a>
             <button class="mobile-menu-toggle" aria-label="Menu">
                 <span></span>
                 <span></span>
@@ -152,7 +152,7 @@
     <header class="sticky-header" id="sticky-header">
         <div class="header-content">
             <span class="header-title">New York, Mon Éveil</span>
-            <a href="#purchase" class="header-cta">Acheter le livre</a>
+            <a href="https://new-york-mon-eveil.lemonsqueezy.com/checkout/buy/629edd26-dec8-40f4-ac3b-f3f91fcc50e6?embed=1" class="lemonsqueezy-button header-cta">Acheter le livre</a>
         </div>
     </header>
 
@@ -240,7 +240,7 @@
                         </div>
                         <div class="excerpt-fade"></div>
                     </div>
-                    <a href="#purchase" class="cta-link">Lire la suite dans le livre <span class="arrow">→</span></a>
+                    <a href="https://new-york-mon-eveil.lemonsqueezy.com/checkout/buy/629edd26-dec8-40f4-ac3b-f3f91fcc50e6?embed=1" class="lemonsqueezy-button cta-link">Lire la suite dans le livre <span class="arrow">→</span></a>
                 </div>
             </div>
         </section>
@@ -657,7 +657,7 @@
                     <h2 class="final-headline">New York vous attend.</h2>
                     <p class="final-subheadline">Ce livre vous y prépare.</p>
                     <p class="final-text">Pas avec des listes. Avec la vérité.</p>
-                    <a href="#purchase" class="cta-button primary large">Commencer la lecture</a>
+                    <a href="https://new-york-mon-eveil.lemonsqueezy.com/checkout/buy/629edd26-dec8-40f4-ac3b-f3f91fcc50e6?embed=1" class="lemonsqueezy-button cta-button primary large">Commencer la lecture</a>
                 </div>
             </div>
         </section>
